# gen/api/v1/service.pb.go
@@ -26,12 +26,14 @@ var File_velony_identity_api_v1_service_proto protoreflect.FileDescriptor
 
 const file_velony_identity_api_v1_service_proto_rawDesc = "" +
 	"\n" +
-	"$velony/identity/api/v1/service.proto\x12\x16velony.identity.api.v1\x1a!velony/identity/api/v1/user.proto\x1a!velony/identity/api/v1/auth.proto\x1a\x1cgoogle/api/annotations.proto\x1a\x17google/api/client.proto\x1a\x1bgoogle/protobuf/empty.proto2\xad\t\n" +
+	"$velony/identity/api/v1/service.proto\x12\x16velony.identity.api.v1\x1a!velony/identity/api/v1/user.proto\x1a!velony/identity/api/v1/auth.proto\x1a\x1cgoogle/api/annotations.proto\x1a\x17google/api/client.proto\x1a\x1bgoogle/protobuf/empty.proto2\x9c\f\n" +
 	"\x0fIdentityService\x12r\n" +
 	"\aGetUser\x12&.velony.identity.api.v1.GetUserRequest\x1a\x1c.velony.identity.api.v1.User\"!\xdaA\x04name\x82\xd3\xe4\x93\x02\x14\x12\x12/v1/{name=users/*}\x12\x88\x01\n" +
 	"\rBatchGetUsers\x12,.velony.identity.api.v1.BatchGetUsersRequest\x1a-.velony.identity.api.v1.BatchGetUsersResponse\"\x1a\x82\xd3\xe4\x93\x02\x14\x12\x12/v1/users:batchGet\x12\x8f\x01\n" +
 	"\n" +
-	"UpdateUser\x12).velony.identity.api.v1.UpdateUserRequest\x1a\x1c.velony.identity.api.v1.User\"8\xdaA\x10user,update_mask\x82\xd3\xe4\x93\x02\x1f:\x04user2\x17/v1/{user.name=users/*}\x12\xac\x01\n" +
+	"UpdateUser\x12).velony.identity.api.v1.UpdateUserRequest\x1a\x1c.velony.identity.api.v1.User\"8\xdaA\x10user,update_mask\x82\xd3\xe4\x93\x02\x1f:\x04user2\x17/v1/{user.name=users/*}\x12\xb9\x01\n" +
+	"\x16RequestUserEmailChange\x125.velony.identity.api.v1.RequestUserEmailChangeRequest\x1a6.velony.identity.api.v1.RequestUserEmailChangeResponse\"0\x82\xd3\xe4\x93\x02*:\x01*\"%/v1/{name=users/*}:requestEmailChange\x12\xb0\x01\n" +
+	"\x16ConfirmUserEmailChange\x125.velony.identity.api.v1.ConfirmUserEmailChangeRequest\x1a6.velony.identity.api.v1.ConfirmUserEmailChangeResponse\"'\x82\xd3\xe4\x93\x02!:\x01*\"\x1c/v1/users:confirmEmailChange\x12\xac\x01\n" +
 	"\x11PresignUserAvatar\x120.velony.identity.api.v1.PresignUserAvatarRequest\x1a1.velony.identity.api.v1.PresignUserAvatarResponse\"2\xdaA\x04name\x82\xd3\xe4\x93\x02%:\x01*\" /v1/{name=users/*}:presignAvatar\x12r\n" +
 	"\n" +
 	"DeleteUser\x12).velony.identity.api.v1.DeleteUserRequest\x1a\x16.google.protobuf.Empty\"!\xdaA\x04name\x82\xd3\xe4\x93\x02\x14*\x12/v1/{name=users/*}\x12\x8f\x01\n" +
@@ -40,41 +42,49 @@ const file_velony_identity_api_v1_service_proto_rawDesc = "" +
 	"\vRefreshAuth\x12*.velony.identity.api.v1.RefreshAuthRequest\x1a+.velony.identity.api.v1.RefreshAuthResponse\"+\xdaA\rrefresh_token\x82\xd3\xe4\x93\x02\x15:\x01*\"\x10/v1/auth:refresh\x1a\x16\xcaA\x13identity.velony.appB0Z.github.com/velonyapp/identity/gen/api/v1;apiv1b\x06proto3"
 
 var file_velony_identity_api_v1_service_proto_goTypes = []any{
-	(*GetUserRequest)(nil),            // 0: velony.identity.api.v1.GetUserRequest
-	(*BatchGetUsersRequest)(nil),      // 1: velony.identity.api.v1.BatchGetUsersRequest
-	(*UpdateUserRequest)(nil),         // 2: velony.identity.api.v1.UpdateUserRequest
-	(*PresignUserAvatarRequest)(nil),  // 3: velony.identity.api.v1.PresignUserAvatarRequest
-	(*DeleteUserRequest)(nil),         // 4: velony.identity.api.v1.DeleteUserRequest
-	(*LoginAuthRequest)(nil),          // 5: velony.identity.api.v1.LoginAuthRequest
-	(*RegisterAuthRequest)(nil),       // 6: velony.identity.api.v1.RegisterAuthRequest
-	(*RefreshAuthRequest)(nil),        // 7: velony.identity.api.v1.RefreshAuthRequest
-	(*User)(nil),                      // 8: velony.identity.api.v1.User
-	(*BatchGetUsersResponse)(nil),     // 9: velony.identity.api.v1.BatchGetUsersResponse
-	(*PresignUserAvatarResponse)(nil), // 10: velony.identity.api.v1.PresignUserAvatarResponse
-	(*emptypb.Empty)(nil),             // 11: google.protobuf.Empty
-	(*LoginAuthResponse)(nil),         // 12: velony.identity.api.v1.LoginAuthResponse
-	(*RegisterAuthResponse)(nil),      // 13: velony.identity.api.v1.RegisterAuthResponse
-	(*RefreshAuthResponse)(nil),       // 14: velony.identity.api.v1.RefreshAuthResponse
+	(*GetUserRequest)(nil),                 // 0: velony.identity.api.v1.GetUserRequest
+	(*BatchGetUsersRequest)(nil),           // 1: velony.identity.api.v1.BatchGetUsersRequest
+	(*UpdateUserRequest)(nil),              // 2: velony.identity.api.v1.UpdateUserRequest
+	(*RequestUserEmailChangeRequest)(nil),  // 3: velony.identity.api.v1.RequestUserEmailChangeRequest
+	(*ConfirmUserEmailChangeRequest)(nil),  // 4: velony.identity.api.v1.ConfirmUserEmailChangeRequest
+	(*PresignUserAvatarRequest)(nil),       // 5: velony.identity.api.v1.PresignUserAvatarRequest
+	(*DeleteUserRequest)(nil),              // 6: velony.identity.api.v1.DeleteUserRequest
+	(*LoginAuthRequest)(nil),               // 7: velony.identity.api.v1.LoginAuthRequest
+	(*RegisterAuthRequest)(nil),            // 8: velony.identity.api.v1.RegisterAuthRequest
+	(*RefreshAuthRequest)(nil),             // 9: velony.identity.api.v1.RefreshAuthRequest
+	(*User)(nil),                           // 10: velony.identity.api.v1.User
+	(*BatchGetUsersResponse)(nil),          // 11: velony.identity.api.v1.BatchGetUsersResponse
+	(*RequestUserEmailChangeResponse)(nil), // 12: velony.identity.api.v1.RequestUserEmailChangeResponse
+	(*ConfirmUserEmailChangeResponse)(nil), // 13: velony.identity.api.v1.ConfirmUserEmailChangeResponse
+	(*PresignUserAvatarResponse)(nil),      // 14: velony.identity.api.v1.PresignUserAvatarResponse
+	(*emptypb.Empty)(nil),                  // 15: google.protobuf.Empty
+	(*LoginAuthResponse)(nil),              // 16: velony.identity.api.v1.LoginAuthResponse
+	(*RegisterAuthResponse)(nil),           // 17: velony.identity.api.v1.RegisterAuthResponse
+	(*RefreshAuthResponse)(nil),            // 18: velony.identity.api.v1.RefreshAuthResponse
 }
 var file_velony_identity_api_v1_service_proto_depIdxs = []int32{
 	0,  // 0: velony.identity.api.v1.IdentityService.GetUser:input_type -> velony.identity.api.v1.GetUserRequest
 	1,  // 1: velony.identity.api.v1.IdentityService.BatchGetUsers:input_type -> velony.identity.api.v1.BatchGetUsersRequest
 	2,  // 2: velony.identity.api.v1.IdentityService.UpdateUser:input_type -> velony.identity.api.v1.UpdateUserRequest
-	3,  // 3: velony.identity.api.v1.IdentityService.PresignUserAvatar:input_type -> velony.identity.api.v1.PresignUserAvatarRequest
-	4,  // 4: velony.identity.api.v1.IdentityService.DeleteUser:input_type -> velony.identity.api.v1.DeleteUserRequest
-	5,  // 5: velony.identity.api.v1.IdentityService.LoginAuth:input_type -> velony.identity.api.v1.LoginAuthRequest
-	6,  // 6: velony.identity.api.v1.IdentityService.RegisterAuth:input_type -> velony.identity.api.v1.RegisterAuthRequest
-	7,  // 7: velony.identity.api.v1.IdentityService.RefreshAuth:input_type -> velony.identity.api.v1.RefreshAuthRequest
-	8,  // 8: velony.identity.api.v1.IdentityService.GetUser:output_type -> velony.identity.api.v1.User
-	9,  // 9: velony.identity.api.v1.IdentityService.BatchGetUsers:output_type -> velony.identity.api.v1.BatchGetUsersResponse
-	8,  // 10: velony.identity.api.v1.IdentityService.UpdateUser:output_type -> velony.identity.api.v1.User
-	10, // 11: velony.identity.api.v1.IdentityService.PresignUserAvatar:output_type -> velony.identity.api.v1.PresignUserAvatarResponse
-	11, // 12: velony.identity.api.v1.IdentityService.DeleteUser:output_type -> google.protobuf.Empty
-	12, // 13: velony.identity.api.v1.IdentityService.LoginAuth:output_type -> velony.identity.api.v1.LoginAuthResponse
-	13, // 14: velony.identity.api.v1.IdentityService.RegisterAuth:output_type -> velony.identity.api.v1.RegisterAuthResponse
-	14, // 15: velony.identity.api.v1.IdentityService.RefreshAuth:output_type -> velony.identity.api.v1.RefreshAuthResponse
-	8,  // [8:16] is the sub-list for method output_type
-	0,  // [0:8] is the sub-list for method input_type
+	3,  // 3: velony.identity.api.v1.IdentityService.RequestUserEmailChange:input_type -> velony.identity.api.v1.RequestUserEmailChangeRequest
+	4,  // 4: velony.identity.api.v1.IdentityService.ConfirmUserEmailChange:input_type -> velony.identity.api.v1.ConfirmUserEmailChangeRequest
+	5,  // 5: velony.identity.api.v1.IdentityService.PresignUserAvatar:input_type -> velony.identity.api.v1.PresignUserAvatarRequest
+	6,  // 6: velony.identity.api.v1.IdentityService.DeleteUser:input_type -> velony.identity.api.v1.DeleteUserRequest
+	7,  // 7: velony.identity.api.v1.IdentityService.LoginAuth:input_type -> velony.identity.api.v1.LoginAuthRequest
+	8,  // 8: velony.identity.api.v1.IdentityService.RegisterAuth:input_type -> velony.identity.api.v1.RegisterAuthRequest
+	9,  // 9: velony.identity.api.v1.IdentityService.RefreshAuth:input_type -> velony.identity.api.v1.RefreshAuthRequest
+	10, // 10: velony.identity.api.v1.IdentityService.GetUser:output_type -> velony.identity.api.v1.User
+	11, // 11: velony.identity.api.v1.IdentityService.BatchGetUsers:output_type -> velony.identity.api.v1.BatchGetUsersResponse
+	10, // 12: velony.identity.api.v1.IdentityService.UpdateUser:output_type -> velony.identity.api.v1.User
+	12, // 13: velony.identity.api.v1.IdentityService.RequestUserEmailChange:output_type -> velony.identity.api.v1.RequestUserEmailChangeResponse
+	13, // 14: velony.identity.api.v1.IdentityService.ConfirmUserEmailChange:output_type -> velony.identity.api.v1.ConfirmUserEmailChangeResponse
+	14, // 15: velony.identity.api.v1.IdentityService.PresignUserAvatar:output_type -> velony.identity.api.v1.PresignUserAvatarResponse
+	15, // 16: velony.identity.api.v1.IdentityService.DeleteUser:output_type -> google.protobuf.Empty
+	16, // 17: velony.identity.api.v1.IdentityService.LoginAuth:output_type -> velony.identity.api.v1.LoginAuthResponse
+	17, // 18: velony.identity.api.v1.IdentityService.RegisterAuth:output_type -> velony.identity.api.v1.RegisterAuthResponse
+	18, // 19: velony.identity.api.v1.IdentityService.RefreshAuth:output_type -> velony.identity.api.v1.RefreshAuthResponse
+	10, // [10:20] is the sub-list for method output_type
+	0,  // [0:10] is the sub-list for method input_type
 	0,  // [0:0] is the sub-list for extension type_name
 	0,  // [0:0] is the sub-list for extension extendee
 	0,  // [0:0] is the sub-list for field type_name
